tema5-font-commit

--- a/projekter/tema3.html
+++ b/projekter/tema3.html
@@ -30,7 +30,7 @@
     <main class="tema-main">
       <!-- HERO -->
       <section class="tema-hero tema-hero--tight">
-        <h1 class="tema-hero__title">Tema 3 – Grundlæggende UX/UI</h1>
+        <h1 class="tema-hero__title">Tema 3 - Grundlæggende UX/UI</h1>
 
         <p class="tema-hero__intro tema-hero__intro--wide">
           I tema 3 arbejdede jeg med grundlæggende UX- og UI-principper med
