--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         <div class="container footer__inner">
           <h4 class="footer__title">Kontakt</h4>
           <p class="footer__text">benjamin.aamann@gmail.com</p>
+          <p class="footer__text">+45 60 14 86 77</p>
+          <p class="footer__text">Instagram / Benjamin.aamann</p>
         </div>
       </footer>
     </main>
