--- a/om-mig.html
+++ b/om-mig.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Om mig</title>
 
-    <!-- Global -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Page -->
+
     <link rel="stylesheet" href="css/om-mig.css" />
   </head>
 
@@ -30,10 +29,8 @@
 
     <main class="about">
       <div class="about__wrap">
-        <!-- LEFT SIDEBAR -->
         <aside class="profile">
           <div class="profile__avatar">
-            <!-- Skift til dit rigtige billede -->
             <img src="images/mig.webp" alt="Benjamin Aamann" />
           </div>
 
@@ -48,7 +45,6 @@
           </ul>
         </aside>
 
-        <!-- RIGHT CONTENT -->
         <section class="content">
           <!-- PROFIL -->
           <article class="block">
@@ -86,7 +82,7 @@
                     mine omgivelser og nedskrev reporter.
                   </div>
                 </div>
-                <div class="rowcard__right">2025 – 2025</div>
+                <div class="rowcard__right">2025 - 2025</div>
               </div>
 
               <div class="rowcard">
@@ -99,7 +95,7 @@
                     såsom, at hjælpe andre som havde svært ved opgaver.
                   </div>
                 </div>
-                <div class="rowcard__right">2023 – 2025</div>
+                <div class="rowcard__right">2023 - 2025</div>
               </div>
               <div class="rowcard">
                 <div class="rowcard__left">
@@ -115,7 +111,7 @@
                     bedste.
                   </div>
                 </div>
-                <div class="rowcard__right">2022 – 2023</div>
+                <div class="rowcard__right">2022 - 2023</div>
               </div>
               <div class="rowcard">
                 <div class="rowcard__left">
@@ -129,7 +125,7 @@
                     hvilket som helst problem.
                   </div>
                 </div>
-                <div class="rowcard__right">2022 – 2022</div>
+                <div class="rowcard__right">2022 - 2022</div>
               </div>
 
               <div class="rowcard">
@@ -141,7 +137,7 @@
                     disciplin, stresshåndtering og præcision.
                   </div>
                 </div>
-                <div class="rowcard__right">2021 – 2022</div>
+                <div class="rowcard__right">2021 - 2022</div>
               </div>
             </div>
           </article>
@@ -163,7 +159,7 @@
                     og digital strategi.
                   </div>
                 </div>
-                <div class="rowcard__right">2023 – 2025</div>
+                <div class="rowcard__right">2023 - 2025</div>
               </div>
 
               <div class="rowcard">
@@ -174,7 +170,7 @@
                     Samfundsfaglig linje med fokus på engelsk og innovation.
                   </div>
                 </div>
-                <div class="rowcard__right">2018 – 2021</div>
+                <div class="rowcard__right">2018 - 2021</div>
               </div>
             </div>
           </article>
@@ -239,6 +235,8 @@
       <div class="container footer__inner">
         <h4 class="footer__title">Kontakt</h4>
         <p class="footer__text">benjamin.aamann@gmail.com</p>
+        <p class="footer__text">+45 60 14 86 77</p>
+        <p class="footer__text">Instagram / Benjamin.aamann</p>
       </div>
     </footer>
   </body>
