--- a/projekter/tema3.html
+++ b/projekter/tema3.html
@@ -30,7 +30,7 @@
     <main class="tema-main">
       <!-- HERO -->
       <section class="tema-hero tema-hero--tight">
-        <h1 class="tema-hero__title">Tema 3 – Grundlæggende UX/UI</h1>
+        <h1 class="tema-hero__title">Tema 3 - Grundlæggende UX/UI</h1>
 
         <p class="tema-hero__intro tema-hero__intro--wide">
           I tema 3 arbejdede jeg med grundlæggende UX- og UI-principper med
@@ -177,6 +177,8 @@
       <div class="container footer__inner">
         <h4 class="footer__title">Kontakt</h4>
         <p class="footer__text">benjamin.aamann@gmail.com</p>
+        <p class="footer__text">+45 60 14 86 77</p>
+        <p class="footer__text">Instagram / Benjamin.aamann</p>
       </div>
     </footer>
   </body>
