--- a/projekter/tema4.html
+++ b/projekter/tema4.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 4 - Grundlæggende brugergrænsefladeudvikling</title>
 
-    <!-- Global styles -->
     <link rel="stylesheet" href="../css/style.css" />
-    <!-- Tema 4 styles -->
+
     <link rel="stylesheet" href="../css/tema4.css" />
   </head>
 
-  <!-- VIGTIGT: tilføj tema4-page så CSS kan targete siden -->
   <body class="tema-page tema4-page">
     <!-- HEADER -->
     <header class="header">
@@ -114,7 +112,6 @@
             />
           </div>
 
-          <!-- VIGTIGT: Begge er kun btn-red (ingen ghost) -->
           <div class="btn-row">
             <a class="btn-red" href="..." target="_blank" rel="noopener"
               >Se emnesite</a
@@ -150,6 +147,8 @@
       <div class="container footer__inner">
         <h4 class="footer__title">Kontakt</h4>
         <p class="footer__text">benjamin.aamann@gmail.com</p>
+        <p class="footer__text">+45 60 14 86 77</p>
+        <p class="footer__text">Instagram / Benjamin.aamann</p>
       </div>
     </footer>
   </body>
