--- a/projekter/tema5.html
+++ b/projekter/tema5.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 5 - Grundlæggende indhold</title>
 
-    <!-- Global styles -->
     <link rel="stylesheet" href="../css/style.css" />
-    <!-- Tema 5 styles -->
+
     <link rel="stylesheet" href="../css/tema5.css" />
   </head>
 
@@ -31,7 +30,7 @@
     <main class="tema-main">
       <!-- HERO -->
       <section class="tema-hero">
-        <h1 class="tema-hero__title">Tema 5 – Grundlæggende indhold</h1>
+        <h1 class="tema-hero__title">Tema 5 - Grundlæggende indhold</h1>
 
         <p class="tema-hero__intro">
           I dette tema havde vi som gruppe for, at skulle redesigne et
@@ -43,7 +42,6 @@
         </p>
       </section>
 
-      <!-- BEFORE/AFTER CARDS -->
       <section class="compare">
         <div class="compare__grid">
           <article class="compare-card">
@@ -148,6 +146,8 @@
       <div class="container footer__inner">
         <h4 class="footer__title">Kontakt</h4>
         <p class="footer__text">benjamin.aamann@gmail.com</p>
+        <p class="footer__text">+45 60 14 86 77</p>
+        <p class="footer__text">Instagram / Benjamin.aamann</p>
       </div>
     </footer>
   </body>
