--- a/projekter/tema2.html
+++ b/projekter/tema2.html
@@ -6,7 +6,7 @@
     <title>Tema 2 - Grundlæggende web | Portfolio</title>
 
     <link rel="stylesheet" href="../css/style.css" />
-    <!-- Tema side styles -->
+
     <link rel="stylesheet" href="../css/tema2.css" />
   </head>
 
@@ -140,6 +140,8 @@
       <div class="container footer__inner">
         <h4 class="footer__title">Kontakt</h4>
         <p class="footer__text">benjamin.aamann@gmail.com</p>
+        <p class="footer__text">+45 60 14 86 77</p>
+        <p class="footer__text">Instagram / Benjamin.aamann</p>
       </div>
     </footer>
   </body>
