--- a/projekter.html
+++ b/projekter.html
@@ -66,7 +66,7 @@
             />
 
             <p class="timeline-tag">TEMA 3</p>
-            <h2 class="timeline-h2">Grundlæggende UX/UI</h2>
+            <h2 class="timeline-h2">Grundlæggende UI/UX</h2>
             <p class="timeline-text">
               I dette tema har jeg arbejdet med grundlæggende UX/UI og lært at
               designe digitale løsninger med udgangspunkt i brugerindsigter frem
@@ -89,7 +89,9 @@
             />
 
             <p class="timeline-tag">TEMA 4</p>
-            <h2 class="timeline-h2">Grundlæggende Indhold</h2>
+            <h2 class="timeline-h2">
+              Grundlæggende brugergrænsefladeudvikling
+            </h2>
             <p class="timeline-text">
               I dette tema har jeg arbejdet med udvikling af brugergrænseflader
               med fokus på visuelle UI-elementer, avanceret CSS og grundlæggende
@@ -116,7 +118,7 @@
             />
 
             <p class="timeline-tag">TEMA 5</p>
-            <h2 class="timeline-h2">Virksomhedsprojekt</h2>
+            <h2 class="timeline-h2">Virksomhedssite</h2>
             <p class="timeline-text">
               I dette tema har jeg arbejdet med grundlæggende indholdsproduktion
               og redesign af et virksomhedssite. Fokus har været på produktion
