--- a/projekter/tema5.html
+++ b/projekter/tema5.html
@@ -30,7 +30,7 @@
     <main class="tema-main">
       <!-- HERO -->
       <section class="tema-hero">
-        <h1 class="tema-hero__title">Tema 5 - Grundlæggende indhold</h1>
+        <h1 class="tema-hero__title">Tema 5 - Virksomhedssite</h1>
 
         <p class="tema-hero__intro">
           I dette tema havde vi som gruppe for, at skulle redesigne et
