--- a/projekter.html
+++ b/projekter.html
@@ -35,7 +35,7 @@
           <div class="timeline-card">
             <img
               class="timeline-img"
-              src="images/tema2-desktop.webp"
+              src="images/tema2-desk.webp"
               alt="Tema 2"
             />
 
@@ -61,7 +61,7 @@
           <div class="timeline-card">
             <img
               class="timeline-img"
-              src="images/traening-desktop.webp"
+              src="images/traening-desk.webp"
               alt="Træning"
             />
 
@@ -84,7 +84,7 @@
           <div class="timeline-card">
             <img
               class="timeline-img"
-              src="images/tema4-desktop.webp"
+              src="images/apeinvasion-samlet.webp"
               alt="Tema 4"
             />
 
@@ -113,7 +113,7 @@
           <div class="timeline-card">
             <img
               class="timeline-img"
-              src="images/tema5-desktop.webp"
+              src="images/replayefter-desk.webp"
               alt="Tema 5"
             />
 
