--- a/projekter/tema2.html
+++ b/projekter/tema2.html
@@ -43,13 +43,13 @@
         <div class="tema-devices">
           <img
             class="device device--desktop"
-            src="../images/tema2-desktop.webp"
+            src="../images/tema2-desk.webp"
             alt="Tema 2 desktop preview"
           />
 
           <img
             class="device device--mobile"
-            src="../images/tema2-mobile.webp"
+            src="../images/mobilsite-mobile.webp"
             alt="Tema 2 mobile preview"
           />
         </div>
