--- a/projekter/tema3.html
+++ b/projekter/tema3.html
@@ -125,7 +125,7 @@
           <div class="tema-devices">
             <img
               class="device device--desktop"
-              src="../images/traening-desktop.webp"
+              src="../images/traening-desk.webp"
               alt="Emsesite desktop"
             />
 
