--- a/projekter/tema4.html
+++ b/projekter/tema4.html
@@ -84,7 +84,7 @@
               Det færdige produkt blev et responsivt og interaktivt website, der
               fungerer på både mobil og desktop.
             </p>
-            <img src="../images/ape-desk-mobile.webp" alt="Færdigt produkt" />
+            <img src="../images/darkmode-desktop.webp" alt="Færdigt produkt" />
           </article>
         </div>
       </section>
@@ -102,12 +102,12 @@
           <div class="tema-devices">
             <img
               class="device device--desktop"
-              src="../images/tema4-desktop.webp"
+              src="../images/apeinvasion-samlet.webp"
               alt="Desktop version"
             />
             <img
               class="device device--mobile"
-              src="../images/tema4-mobile.webp"
+              src="../images/apeinvasion-mobile.webp"
               alt="Mobil version"
             />
           </div>
