--- a/projekter/tema5.html
+++ b/projekter/tema5.html
@@ -49,7 +49,7 @@
             <div class="compare-card__media">
               <img
                 class="compare-card__img"
-                src="../images/virk1.webp"
+                src="../images/replay-foer-samlet.webp"
                 alt="Virksomhedssite før ændring"
               />
             </div>
@@ -60,7 +60,7 @@
             <div class="compare-card__media">
               <img
                 class="compare-card__img"
-                src="../images/virk2.webp"
+                src="../images/replay-samlet.webp"
                 alt="Virksomhedssite efter ændring"
               />
             </div>
