--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container header__inner">
         <a class="logo" href="../index.html">
-          <img src="../images/apelogo.webp" alt="BA logo" />
+          <img src="../images/ba-logo.svg" alt="BA logo" />
         </a>
 
         <nav class="nav">
