--- a/om-mig.html
+++ b/om-mig.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container header__inner">
         <a class="logo" href="index.html" aria-label="Gå til forside">
-          <img src="images/apelogo.webp" alt="BA logo" />
+          <img src="images/ba-logo.svg" alt="BA logo" />
         </a>
 
         <nav class="nav" aria-label="Hovednavigation">
@@ -74,7 +74,7 @@
               <div class="rowcard">
                 <div class="rowcard__left">
                   <div class="rowcard__job">Receptionist</div>
-                  <div class="rowcard__place">Scandic Kødbyen</div>
+                  <div class="rowcard__place">Scandic Spectrum</div>
                   <div class="rowcard__desc">
                     Bød kunder velkommen, gav dem information og fremragende
                     service. Håndterede opkald, personlige informationer, samt
