--- a/projekter.html
+++ b/projekter.html
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container header__inner">
         <a href="index.html" class="logo" aria-label="Gå til forside">
-          <img src="images/apelogo.webp" alt="BA logo" />
+          <img src="images/ba-logo.svg" alt="BA logo" />
         </a>
 
         <nav class="nav" aria-label="Hovednavigation">
