--- a/projekter/tema3.html
+++ b/projekter/tema3.html
@@ -139,14 +139,14 @@
           <div class="btn-row">
             <a
               class="btn-red"
-              href="https://DIT-LINK-TIL-EMNESITE.dk"
+              href="https://benjaminaamann.github.io/emnesite/"
               target="_blank"
               rel="noopener"
               >Se emnesite</a
             >
             <a
               class="btn-red btn-red--ghost"
-              href="https://DIT-LINK-TIL-FIGMA.dk"
+              href="https://www.figma.com/design/zCCXMnPKVZTn2Nyr2aaw6Z/Emnesite?node-id=0-1&t=JL66lC3EhEJj9PO7-1"
               target="_blank"
               rel="noopener"
               >Se Figma</a
