--- a/projekter/tema4.html
+++ b/projekter/tema4.html
@@ -113,10 +113,18 @@
           </div>
 
           <div class="btn-row">
-            <a class="btn-red" href="..." target="_blank" rel="noopener"
+            <a
+              class="btn-red"
+              href="https://benjaminaamann.github.io/ape-invasion-final/"
+              target="_blank"
+              rel="noopener"
               >Se emnesite</a
             >
-            <a class="btn-red" href="..." target="_blank" rel="noopener"
+            <a
+              class="btn-red"
+              href="https://www.figma.com/design/HLCCPYlMVeOmaIG8AWtouw/Emergency-site?node-id=42-4&t=OVyK1b6UV9p9gx9I-1"
+              target="_blank"
+              rel="noopener"
               >Se Figma</a
             >
           </div>
