--- a/projekter/tema5.html
+++ b/projekter/tema5.html
@@ -106,7 +106,7 @@
         <div class="btn-row">
           <a
             class="btn-red"
-            href="https://DIT-LINK.dk"
+            href="https://e25-t5-replay.github.io/replay/"
             target="_blank"
             rel="noopener"
           >
@@ -114,7 +114,7 @@
           </a>
           <a
             class="btn-red"
-            href="https://DIT-FIGMA-LINK.dk"
+            href="https://www.figma.com/design/ESO2L2cWZomFmBu0EUiDOZ/Virksomhedssite---Procesdokument?node-id=90-138&t=8lPveVEH2kUYyah9-1"
             target="_blank"
             rel="noopener"
           >
