--- a/kontakt.html
+++ b/kontakt.html
@@ -18,11 +18,24 @@
           <img src="../images/ba-logo.svg" alt="BA logo" />
         </a>
 
-        <nav class="nav">
-          <a class="nav__link" href="../index.html">Forside</a>
-          <a class="nav__link" href="../projekter.html">Projekter</a>
-          <a class="nav__link" href="../om-mig.html">Om mig</a>
-          <a class="nav__link active" href="../kontakt.html">Kontakt</a>
+        <nav class="nav" aria-label="Hovednavigation">
+          <button
+            class="nav__toggle"
+            type="button"
+            aria-label="Åbn menu"
+            aria-expanded="false"
+          >
+            <span class="nav__bar"></span>
+            <span class="nav__bar"></span>
+            <span class="nav__bar"></span>
+          </button>
+
+          <div class="nav__menu" id="mainmenu">
+            <a class="nav__link" href="../index.html">Forside</a>
+            <a class="nav__link active" href="../projekter.html">Projekter</a>
+            <a class="nav__link" href="../om-mig.html">Om mig</a>
+            <a class="nav__link" href="../kontakt.html">Kontakt</a>
+          </div>
         </nav>
       </div>
     </header>
@@ -92,5 +105,6 @@
         <p class="footer__text">Instagram / Benjamin.aamann</p>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
