--- a/projekter/tema3.html
+++ b/projekter/tema3.html
@@ -31,10 +31,10 @@
           </button>
 
           <div class="nav__menu" id="mainmenu">
-            <a class="nav__link" href="index.html">Forside</a>
-            <a class="nav__link active" href="projekter.html">Projekter</a>
-            <a class="nav__link" href="om-mig.html">Om mig</a>
-            <a class="nav__link" href="kontakt.html">Kontakt</a>
+            <a class="nav__link" href="../index.html">Forside</a>
+            <a class="nav__link active" href="../projekter.html">Projekter</a>
+            <a class="nav__link" href="../om-mig.html">Om mig</a>
+            <a class="nav__link" href="../kontakt.html">Kontakt</a>
           </div>
         </nav>
       </div>
