--- a/kontakt.html
+++ b/kontakt.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontakt - Benjamin Aamann</title>
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-    <link rel="stylesheet" href="../css/kontakt.css" />
+    <link rel="stylesheet" href="css/kontakt.css" />
   </head>
 
   <body class="kontakt-page">
     <!-- HEADER -->
     <header class="header">
       <div class="container header__inner">
-        <a class="logo" href="../index.html">
-          <img src="../images/ba-logo.svg" alt="BA logo" />
+        <a class="logo" href="index.html">
+          <img src="images/ba-logo.svg" alt="BA logo" />
         </a>
 
         <nav class="nav" aria-label="Hovednavigation">
@@ -67,7 +67,7 @@
         <!-- INFO -->
         <div class="kontakt-info">
           <img
-            src="../images/mig-i-sne.webp"
+            src="images/mig-i-sne.webp"
             alt="Benjamin Aamann"
             class="kontakt-img"
           />
@@ -90,7 +90,7 @@
           </p>
 
           <div class="cta__buttons">
-            <a href="../projekter.html" class="cta__btn">Projekter</a>
+            <a href="projekter.html" class="cta__btn">Projekter</a>
           </div>
         </div>
       </section>
